[gd_scene load_steps=8 format=3 uid="uid://bq4mheqvybeif"]

[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id="1_ks1q4"]
[ext_resource type="Script" path="res://scripts/PartyDisplay.gd" id="2_cvqqf"]
[ext_resource type="FontFile" uid="uid://d0uyjc1djjwtt" path="res://fonts/Runic MT Std Condensed.otf" id="3_yckrg"]
[ext_resource type="AudioStream" uid="uid://breo6syvgrnfc" path="res://sfx/deck_ui_navigation.wav" id="4_ee12q"]
[ext_resource type="Script" path="res://InventoryUI.gd" id="5_w3v34"]
[ext_resource type="Texture2D" uid="uid://b2gqpdna6r5oi" path="res://assets/portraits/Screenshot 2025-07-03 040158.png" id="6_pjp84"]
[ext_resource type="PackedScene" uid="uid://cin4x62obt3ul" path="res://scenes/items/inventory_slot.tscn" id="6_pli7a"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_ks1q4")

[node name="InvenPanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryUI" type="CanvasLayer" parent="InvenPanel"]
script = ExtResource("5_w3v34")

[node name="ItemGrid" type="GridContainer" parent="InvenPanel/InventoryUI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="InventorySlot" parent="InvenPanel/InventoryUI/ItemGrid" instance=ExtResource("6_pli7a")]
layout_mode = 2

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 40.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 30

[node name="Gold" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -62.0
offset_right = 40.0
offset_bottom = -39.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 30

[node name="Location" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 30

[node name="HBox" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_bottom = 678.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
focus_mode = 2

[node name="Items" type="Button" parent="Panel/HBox/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_direction = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Items"

[node name="Magic" type="Button" parent="Panel/HBox/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Magic"

[node name="Equip" type="Button" parent="Panel/HBox/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Equip"

[node name="Status" type="Button" parent="Panel/HBox/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Status"

[node name="Quests" type="Button" parent="Panel/HBox/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quests
"

[node name="Config" type="Button" parent="Panel/HBox/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Config"

[node name="Save" type="Button" parent="Panel/HBox/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Save"

[node name="Load" type="Button" parent="Panel/HBox/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Load"

[node name="PartyDisplay" type="VBoxContainer" parent="Panel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_cvqqf")

[node name="Player1" type="HBoxContainer" parent="Panel/HBox/PartyDisplay"]
layout_mode = 2
size_flags_vertical = 3

[node name="Portrait" type="TextureRect" parent="Panel/HBox/PartyDisplay/Player1"]
layout_mode = 2
expand_mode = 2

[node name="VBox" type="VBoxContainer" parent="Panel/HBox/PartyDisplay/Player1"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/HBox/PartyDisplay/Player1/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="Level" type="Label" parent="Panel/HBox/PartyDisplay/Player1/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="Title" type="Label" parent="Panel/HBox/PartyDisplay/Player1/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBox/PartyDisplay/Player1"]
layout_mode = 2
size_flags_horizontal = 6

[node name="HP" type="Label" parent="Panel/HBox/PartyDisplay/Player1/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="MP" type="Label" parent="Panel/HBox/PartyDisplay/Player1/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="EXP" type="Label" parent="Panel/HBox/PartyDisplay/Player1/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="Player2" type="HBoxContainer" parent="Panel/HBox/PartyDisplay"]
layout_mode = 2
size_flags_vertical = 3

[node name="Portrait" type="TextureRect" parent="Panel/HBox/PartyDisplay/Player2"]
layout_mode = 2
expand_mode = 2

[node name="VBox" type="VBoxContainer" parent="Panel/HBox/PartyDisplay/Player2"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/HBox/PartyDisplay/Player2/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="Level" type="Label" parent="Panel/HBox/PartyDisplay/Player2/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="Title" type="Label" parent="Panel/HBox/PartyDisplay/Player2/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBox/PartyDisplay/Player2"]
layout_mode = 2
size_flags_horizontal = 6

[node name="HP" type="Label" parent="Panel/HBox/PartyDisplay/Player2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="MP" type="Label" parent="Panel/HBox/PartyDisplay/Player2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="EXP" type="Label" parent="Panel/HBox/PartyDisplay/Player2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="Player3" type="HBoxContainer" parent="Panel/HBox/PartyDisplay"]
layout_mode = 2
size_flags_vertical = 3

[node name="Portrait" type="TextureRect" parent="Panel/HBox/PartyDisplay/Player3"]
layout_mode = 2
expand_mode = 2

[node name="VBox" type="VBoxContainer" parent="Panel/HBox/PartyDisplay/Player3"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/HBox/PartyDisplay/Player3/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="Level" type="Label" parent="Panel/HBox/PartyDisplay/Player3/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="Title" type="Label" parent="Panel/HBox/PartyDisplay/Player3/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBox/PartyDisplay/Player3"]
layout_mode = 2
size_flags_horizontal = 6

[node name="HP" type="Label" parent="Panel/HBox/PartyDisplay/Player3/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="MP" type="Label" parent="Panel/HBox/PartyDisplay/Player3/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="EXP" type="Label" parent="Panel/HBox/PartyDisplay/Player3/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="Player4" type="HBoxContainer" parent="Panel/HBox/PartyDisplay"]
layout_mode = 2
size_flags_vertical = 3

[node name="Portrait" type="TextureRect" parent="Panel/HBox/PartyDisplay/Player4"]
layout_mode = 2
expand_mode = 2

[node name="VBox" type="VBoxContainer" parent="Panel/HBox/PartyDisplay/Player4"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/HBox/PartyDisplay/Player4/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="Level" type="Label" parent="Panel/HBox/PartyDisplay/Player4/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="Title" type="Label" parent="Panel/HBox/PartyDisplay/Player4/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBox/PartyDisplay/Player4"]
layout_mode = 2
size_flags_horizontal = 6

[node name="HP" type="Label" parent="Panel/HBox/PartyDisplay/Player4/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="MP" type="Label" parent="Panel/HBox/PartyDisplay/Player4/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="EXP" type="Label" parent="Panel/HBox/PartyDisplay/Player4/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 40

[node name="StatusPanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StatusPanel"]
layout_mode = 0
offset_left = 575.0
offset_right = 775.0
offset_bottom = 724.0

[node name="Portrait" type="TextureRect" parent="StatusPanel/VBoxContainer"]
layout_mode = 2
expand_mode = 4
stretch_mode = 4

[node name="Name" type="Label" parent="StatusPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 37

[node name="Level" type="Label" parent="StatusPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 37

[node name="HP" type="Label" parent="StatusPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 37

[node name="MP" type="Label" parent="StatusPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 37

[node name="STR" type="Label" parent="StatusPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 37

[node name="MAG" type="Label" parent="StatusPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 37

[node name="SPD" type="Label" parent="StatusPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 37

[node name="END" type="Label" parent="StatusPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 37

[node name="RES" type="Label" parent="StatusPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 37

[node name="LUK" type="Label" parent="StatusPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 37

[node name="EXP" type="Label" parent="StatusPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 37

[node name="TOTEXP" type="Label" parent="StatusPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yckrg")
theme_override_font_sizes/font_size = 37

[node name="MagicPanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MagicDisplay" type="VBoxContainer" parent="MagicPanel"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopInfo" type="HBoxContainer" parent="MagicPanel/MagicDisplay"]
custom_minimum_size = Vector2(0, 218)
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="MagicPanel/MagicDisplay/TopInfo"]
custom_minimum_size = Vector2(164, 64)
layout_mode = 2
texture = ExtResource("6_pjp84")
expand_mode = 4
stretch_mode = 4

[node name="InfoBox" type="HBoxContainer" parent="MagicPanel/MagicDisplay/TopInfo"]
layout_mode = 2

[node name="Name" type="Label" parent="MagicPanel/MagicDisplay/TopInfo/InfoBox"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Goku"

[node name="HPLabel" type="Label" parent="MagicPanel/MagicDisplay/TopInfo/InfoBox"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="MPLabel" type="Label" parent="MagicPanel/MagicDisplay/TopInfo/InfoBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="MagicGrid" type="GridContainer" parent="MagicPanel/MagicDisplay"]
custom_minimum_size = Vector2(0, 361)
layout_mode = 2
columns = 4

[node name="Description" type="Label" parent="MagicPanel/MagicDisplay"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2

[node name="TargetPanel" type="VBoxContainer" parent="MagicPanel"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ee12q")
volume_db = -7.764

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]
volume_db = -0.915
